--- a/Versión_4_Algoritmo_basado_en_aprendizaje_profundo.ipynb
+++ b/Versión_4_Algoritmo_basado_en_aprendizaje_profundo.ipynb
@@ -199,7 +199,7 @@
         "!pip install roboflow\n",
         "\n",
         "from roboflow import Roboflow\n",
-        "rf = Roboflow(api_key=\"6ayNBfk3sVP1DOJkRRrH\")\n",
+        "rf = Roboflow(api_key=\"api_key\")\n",
         "project = rf.workspace(\"raylexaguirre\").project(\"road-users-disabilities\")\n",
         "dataset = project.version(4).download(\"yolov8\")"
       ],
